Add streaming Hibernate find.many providers (#726)